<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.hangzhou.tonight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color" >
    
    <EditText
        android:id="@+id/socail_add_friend_search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:inputType="text"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp"
        android:imeOptions="actionSearch"
        android:background="@drawable/selector_individual_edittext_invitationcode"
        android:hint="@string/input_phonenum_name"
        />
	
    <com.hangzhou.tonight.module.base.widget.TextViewWithDevider
        android:id="@+id/social_add_friend_address_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/friend_addressbook"
        app:drawableLeft="@drawable/address_book"
        app:allow_default="false"
        ></com.hangzhou.tonight.module.base.widget.TextViewWithDevider>
    
    <com.hangzhou.tonight.module.base.widget.TextViewWithDevider
        android:id="@+id/social_add_friend_wechat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/friend_wechat"
        app:drawableLeft="@drawable/wechat"
        app:allow_default="false"
        ></com.hangzhou.tonight.module.base.widget.TextViewWithDevider>
    
    <com.hangzhou.tonight.module.base.widget.TextViewWithDevider
        android:id="@+id/social_add_friend_qq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/friend_qq"
        app:drawableLeft="@drawable/qq"
        app:allow_default="false"
        ></com.hangzhou.tonight.module.base.widget.TextViewWithDevider>
    
</LinearLayout>
