<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp" >

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg_top_normal"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="5dp"
            android:padding="5dp"
            android:textSize="18sp"
            android:text="@string/app_name"
            android:textColor="#FF333333" />

        <EditText
            android:id="@+id/edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:padding="5dp"
            android:maxLines="3"
            android:hint="@string/input_please"
            android:lines="3"
            android:focusable="true"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/dialog_bg_bottom_normal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_left_selector"
            android:text="@string/sure"
            android:textColor="#FF7ED321" 
            android:textSize="14sp"/>

        <TextView
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.01"
            android:background="#E9E2DD" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/dialog_btn_right_selector"
            android:text="@string/cancel"
            android:textColor="#FFD0021B"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>